# F-SERVO

.github/workflows/: build_windows.yml
F-SERVO/: GUIA_COMPILACAO_NUVEM_GITHUB.md  GUIA_INSTALACAO_FLUTTER_WINDOWS.md  README.md  WIIU_VALIDATION_REPORT.md  WIIU_support.patch  WIIU_support_v3.patch  WINDOWS_GUIDE.md  build_windows_release.bat
F-SERVO/android/: local.properties
F-SERVO/assets/FontAtlasGenerator/: __init__.py  cliOptions.py  fontAtlasGenerator.py  fontFumbnailGenerator.py
F-SERVO/assets/MrubyDecompiler/: build_release.py
F-SERVO/assets/rusty_platinum_utils/: Cargo.toml  build.rs  cbindgen.toml
F-SERVO/assets/rusty_platinum_utils/src/: byte_stream.rs  c_exports.rs  lib.rs  mesh_data.rs  mesh_renderer.rs  scr_mgrr.rs  wmb.rs  wmb_mgrr.rs  wmb_na.rs  wmb_scr.rs  wta_wtp.rs
F-SERVO/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
F-SERVO/ios/Flutter/ephemeral/: flutter_native_integration.env
F-SERVO/ios/Runner/: GeneratedPluginRegistrant.m
F-SERVO/lib/fileTypeUtils/audio/: wavToWemConverter.dart
F-SERVO/lib/fileTypeUtils/dat/: datExtractor.dart  datRepacker.dart
F-SERVO/lib/fileTypeUtils/mcd/: mcdIO.dart
F-SERVO/lib/fileTypeUtils/ruby/: pythonRuby.dart
F-SERVO/lib/fileTypeUtils/wta/: wtaExtractor.dart  wtaReader.dart
F-SERVO/lib/utils/: utils.dart
F-SERVO/lib/widgets/FileHierarchyExplorer/: wemPreviewButton.dart
F-SERVO/lib/widgets/misc/: CustomIcons.dart  SelectableListEntry.dart  arrowNavigationList.dart  puidDraggable.dart  (+1 more)
F-SERVO/tools/: platinum_wiiu_tools.py
F-SERVO/windows/runner/: main.cpp
(+25 files in other folders)
